fixed login button on homepage z-index issue

--- a/app/assets/stylesheets/components/home/home.scss
+++ b/app/assets/stylesheets/components/home/home.scss
@@ -106,6 +106,7 @@
   display: flex;
   justify-content: flex-end;
   padding: 10px;
+  z-index: 5;
 }
 
 .home-header .sessionButton div{
